<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:paddingTop="10dp"
    android:background="@drawable/no_color_rounded_box"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

 <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
     android:background="@drawable/line"
     android:layout_margin="5dp"
     android:padding="5dp"
     android:gravity="center"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
     android:layout_gravity="center_horizontal"
     android:orientation="vertical">
    <TextView
        android:id="@+id/deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/deadline"
        android:textColor="@color/radical_red" />
     <TextView
         android:id="@+id/deadline_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/date" />

 </LinearLayout>


 <LinearLayout

     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:background="@color/white"
     android:orientation="vertical"
     android:padding="5dp">

    <TextView
        android:id="@+id/subject_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp"
        android:text="@string/operating_system" />
     <TextView
         android:id="@+id/sheet_no_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp"
         android:text="@string/sheet_x" />
     <TextView
         android:id="@+id/uploadin_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:text="@string/upladed_dd_mm_yyyy" />



 </LinearLayout>


</LinearLayout>