<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:paddingTop="10dp"
    android:background="@drawable/no_color_rounded_box"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/sentQuestionSubject"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:background="@drawable/line"
        android:layout_gravity="center"
        android:padding="10dp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:text="@string/operating_system"
        android:textColor="@color/radical_red" />





    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/sentchapterNO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:text="@string/chapter_x" />
        <TextView
            android:id="@+id/sentSlideNO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:text="@string/slide_x" />
        <TextView
            android:id="@+id/sentQuestionBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/book_blabla" />

        <Button
            android:id="@+id/editQuestion"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_gravity="end"
            android:background="@drawable/no_color_rounded_box"
            android:layout_marginBottom="5dp"
            android:drawableStart="@drawable/edit"
            android:text="@string/edit"
            android:textColor="@color/radical_red" />



    </LinearLayout>



</LinearLayout>