<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="LoginViewModel"
            type="com.example.e_learning.ui.login.LoginViewModel" />

    </data>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grad">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"

            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/AppTheme"
            tools:context=".MainActivity">


            <ImageView
                android:contentDescription="@string/logobook"
                android:id="@+id/Logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/mobile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/appname"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Logo"


                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rounded_shpae"
                android:layout_width="275dp"
                android:layout_height="420dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_shape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/appname">

                <TextView
                    android:id="@+id/Hello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/Hello_LoginScreen"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />

                <TextView
                    android:id="@+id/please_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif"

                    android:text="@string/Please_login"
                    android:textColor="#999999"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Hello"

                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/Form_inputs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_margin="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/please_login">

                    <TextView
                        android:id="@+id/EmailTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/EmailAddress"
                        android:textColor="#999999"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"

                        />

                    <EditText

                        android:id="@+id/EmailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawableEnd="@drawable/ic_email"
                        android:hint="@string/enter_your_id"
                        android:inputType="textEmailAddress"
                        android:text="@={LoginViewModel.email}"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/EmailTextView" />


                    <TextView
                        android:id="@+id/PasswordTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/password"
                        android:textColor="#999999"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/EmailEditText"

                        />


                    <EditText
                        android:id="@+id/PasswordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawableEnd="@drawable/ic_eye_view"
                        android:hint="@string/enter_your_password"
                        android:inputType="textPassword"
                        android:text="@={LoginViewModel.password}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/PasswordTextView" />

                    <TextView
                        android:id="@+id/Forget_Password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/forget_password"
                        android:textColor="#0093E9"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/PasswordEditText" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/login_Buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Form_inputs"

                    >

                    <Button
                        android:id="@+id/Login_Button"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_box"
                        android:text="@string/login"
                        android:textColor="#FFF"
                        android:onClick="@{(v) -> LoginViewModel.onClick(v)}"

                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"


                        />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rounded_shpae">

                <TextView
                    android:id="@+id/RegisterTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />

                <TextView

                    android:id="@+id/reg_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/register_now"
                    android:textColor="#FFF"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/RegisterTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>